Bug 1926624 - [beta] Don't use GetTopLevelWidget on nsDocumentViewer::CreateDeviceContext on macOS. r=#mac-reviewers!, a=dmeehan

This is an uplift friendly fix which just restores macOS behavior on
this problematic callsite, preventing issues like the one from comment
0.

What nsDeviceContext does with the widget is just calling GetDPI, and
nsChildView has a reasonable implementation, so this should be safe.

Differential Revision: https://phabricator.services.mozilla.com/D227879